# Ds

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
apps/: CMakeLists.txt
apps/cgdemo/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  RayTracer.cpp  RayTracer.h  SceneWriter.cpp  SceneWriter.h  Writer.cpp  Writer.h
apps/cgdemo/assets/scenes/: colors.inc  materials.inc  test.scn
apps/cgdemo/reader/: AbstractParser.cpp  AbstractParser.h  Buffer.cpp  Buffer.h  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Expression.cpp  Expression.h  FileBuffer.cpp  FileBuffer.h  ReaderBase.cpp  ReaderBase.h  SceneReader.cpp  SceneReader.h  Scope.cpp  Scope.h  StringRef.h  grammar.txt
apps/cgvisdemo/: Demo.cpp  Main.cpp  MainWindow.cpp  MainWindow.h  demo.txt
apps/template/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h
cg/include/core/: AllocableObject.h  Array.h  BlockAllocable.h  BlockAllocator.h  ContentHolder.h  Exception.h  Flags.h  Globals.h  List.h  ListBase.h  NameableObject.h  ObjectList.h  ObjectPool.h  SharedObject.h  SoA.h  StandardAllocator.h
cg/include/debug/: AnimatedAlgorithm.h
cg/include/geometry/: BVH.h  Bounds2.h  Bounds3.h  Grid2.h  Grid3.h  GridBase.h  Index2.h  Index3.h  IndexList.h  Intersection.h  KNNHelper.h  Line.h  MeshSweeper.h  Octree.h  ParticleSystem.h  Point2.h  Point3.h  PointArray.h  PointGrid2.h  PointGrid3.h  PointGridBase.h  PointHolder.h  PointOctree.h  PointQuadtree.h  PointTreeBase.h  Quad.h  Quadtree.h  Ray.h  TreeBase.h  Triangle.h  TriangleMesh.h  TriangleMeshBVH.h
cg/include/graph/: CameraProxy.h  Component.h  ComponentProxy.h  LightProxy.h  PrimitiveProxy.h  Scene.h  SceneEditor.h  SceneNode.h  SceneObject.h  SceneObjectBuilder.h  SceneWindow.h  Transform.h
cg/include/graphics/: Actor.h  Application.h  AssetFolder.h  Assets.h  BVH.h  Camera.h  CameraHolder.h  Color.h  GLBuffer.h  GLFramebuffer.h  GLGraphics2.h  GLGraphics3.h  GLGraphicsBase.h  GLImage.h  GLLines3.h  GLLines3Renderer.h  GLMesh.h  GLMeshRenderer.h  GLPoints3.h  GLPoints3Renderer.h  GLProgram.h  GLRenderWindow2.h  GLRenderWindow3.h  GLRenderer.h  GLRendererBase.h  GLTextureFramebuffer.h  GLWindow.h  Image.h  Intersection.h  Light.h  Material.h  Primitive.h  PrimitiveBVH.h  PrimitiveMapper.h  Renderer.h  SceneBase.h  SceneEditor.h  SceneWindowBase.h  Shape.h  TransformableObject.h  (+4 more)
cg/include/math/: Matrix3x3.h  Matrix4x4.h  Quaternion.h  Real.h  RealLimits.h  Vector2.h  Vector3.h  Vector4.h
cg/include/utils/: MeshReader.h  MeshWriter.h  Stopwatch.h
cg/src/core/: BlockAllocator.cpp  Exception.cpp  NameableObject.cpp
cg/src/debug/: AnimatedAlgorithm.cpp
cg/src/geometry/: BVH.cpp  IndexList.cpp  MeshSweeper.cpp  TriangleMesh.cpp  TriangleMeshBVH.cpp
cg/src/graph/: CameraProxy.cpp  Component.cpp  LightProxy.cpp  PrimitiveProxy.cpp  SceneEditor.cpp  SceneObject.cpp  SceneObjectBuilder.cpp  SceneWindow.cpp  Transform.cpp
cg/src/graphics/: Application.cpp  AssetFolder.cpp  Assets.cpp  BVH.cpp  Camera.cpp  Color.cpp  GLFramebuffer.cpp  GLGraphics2.cpp  GLGraphics3.cpp  GLGraphicsBase.cpp  GLImage.cpp  GLLines3.cpp  GLLines3Renderer.cpp  GLMesh.cpp  GLMeshRenderer.cpp  GLPoints3.cpp  GLPoints3Renderer.cpp  GLProgram.cpp  GLRenderWindow2.cpp  GLRenderWindow3.cpp  GLRenderer.cpp  GLRendererBase.cpp  GLTextureFramebuffer.cpp  GLWindow.cpp  Image.cpp  Light.cpp  Primitive.cpp  PrimitiveBVH.cpp  PrimitiveMapper.cpp  Renderer.cpp  SceneEditor.cpp  SceneWindowBase.cpp  Shape.cpp  TransformableObject.cpp  TriangleMeshBVH.cpp  TriangleMeshMapper.cpp  TriangleMeshShape.cpp
cg/src/utils/: MeshReader.cpp  MeshWriter.cpp
cgcuda/include/: CUDAArray.h  CUDAHelper.h
cgcuda/src/: CUDAHelper.cpp
cgvis/include/: BoxSource.h  Cell.h  ConeSource.h  ContourFilter.h  CylinderSource.h  DataArray.h  DataSet.h  ElevationFilter.h  Filter.h  Glyph3.h  LightProxy.h  LookupTable.h  Mapper.h  Object.h  PointLocator.h  PointSet.h  PolyData.h  PolyDataMapper.h  PolyMesh.h  PolyMeshBuilder.h  PolyMeshMapper.h  Scalars.h  Scene.h  SceneWindow.h  Source.h  SphereSource.h  Transform.h  TransformFilter.h  TriCell.h  TriCellMesh.h  TriCellMeshMapper.h  TriCellMeshNormals.h  TriCellMeshReader.h  Writer.h
cgvis/src/: BoxSource.cpp  ConeSource.cpp  CylinderSource.cpp  Glyph3.cpp  LookupTable.cpp  Mapper.cpp  PolyData.cpp  PolyDataMapper.cpp  PolyMesh.cpp  PolyMeshBuilder.cpp  PolyMeshMapper.cpp  Scalars.cpp  Scene.cpp  SceneWindow.cpp  Source.cpp  SphereSource.cpp  Transform.cpp  TriCell.cpp  TriCellMesh.cpp  TriCellMeshMapper.cpp  TriCellMeshNormals.cpp  TriCellMeshReader.cpp
cmake/: externals.cmake
